--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -179,13 +179,13 @@ $fonts: (
 
 $sizes: (
     "dull": 0 !important,
-    // "humungus-xl": $size-humungus-xl,
-    // "humungus": $size-humungus,
-    // "gigantic-xl": $size-gigantic,
-    // "gigantic": $size-gigantic,
-    // "huge-xl": $size-huge-xl,
+    "humungus-xl": $size-humungus-xl,
+    "humungus": $size-humungus,
+    "gigantic-xl": $size-gigantic,
+    "gigantic": $size-gigantic,
+    "huge-xl": $size-huge-xl,
     "huge": $size-huge,
-    // "extra-xl": $size-extra-xl,
+    "extra-xl": $size-extra-xl,
     "extra-large": $size-extra-large,
     "sub-extra-large": $size-sub-extra-large,
     "larger": $size-larger,
