--- a/views/components/navbar.pug
+++ b/views/components/navbar.pug
@@ -17,7 +17,7 @@ mixin navbar(value = {})
 
   header.header
     nav.navbar.navbar-fixed(class=_class itemscope itemtype="https://schema.org/SiteNavigationElement")
-      .layout-contain-large.navbar-layout
+      .layout-contain-enlarge.navbar-layout
         .navbar-head(itemscope itemtype="http://schema.org/Organization")
           +link({
             href: "/",
