--- a/views/pages/projects/nasa.pug
+++ b/views/pages/projects/nasa.pug
@@ -66,7 +66,7 @@ block content
           p.layer-content.style-font-bold.style-400.style-font-large--device-gt-tablet.style-font-sub-large--device-lt-tablet.style-line-height Ultima Apparel
 
         +tile({
-          class: "layer-box layer-box-flat layer-tertiary-dark layer-shadow--2 layout-margin-vert-top-larger layout-block layer-tile-outline",
+          class: "layer-box layer-box-flat-mobile layer-tertiary-dark layer-shadow--2 layout-margin-vert-top-larger layout-block layer-tile-outline",
           image: {
             class: "effect-parallax",
             src: "cloudinary/Ultima_Team_2",
