--- a/views/components/hero.pug
+++ b/views/components/hero.pug
@@ -11,10 +11,10 @@ mixin hero(value = {})
         div(class=_class)
           +image(image)
 
-          .layout-padding-horz-default--device-lt-tablet.layout-padding-horz-sub-large--device-lt-laptop.layout-padding-vert-sub-extra-large--device-lt-tablet.layout-padding-vert-huge--device-gt-tablet.layout-enlarge-horz.layout-flex.layout-align-items-center.layout-justify-content-center
+          .layout-padding-horz-default--device-lt-tablet.layout-padding-horz-sub-large--device-lt-laptop.layout-padding-vert-extra-large--device-lt-tablet.layout-padding-vert-huge--device-gt-tablet.layout-enlarge-horz.layout-flex.layout-align-items-center.layout-justify-content-center
             .layer-content.layout-contain
-              .layer-header
-                h1.style-font-title.layer-title.style-white.style-font-weight-bolder(itemprop="headline")= title
+              .layer-header.layer-title
+                h1.style-font-size-sub-extra-large--device-gt-laptop.style-font-title.style-white.style-font-weight-bolder(itemprop="headline")= title
               .layer-main
                 h2.style-font-family-bold.style-font-weight-300.style-off-blue.layer-main-text(itemprop="description")!= content
               .layout-align-self-end
@@ -26,4 +26,3 @@ mixin hero(value = {})
                         span.action-btn-spacer
                         span.action-btn-content Scroll Down
                         span.action-btn-spacer
-        
