--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -4,7 +4,7 @@ block hero
   //- Hero layer
   +hero({
     title: "Bridging the Gap",
-    content: "Bringing Hardware and Software to life. *Morgan Freeman's voice here*",
+    content: "Bringing Hardware and Software to life.",
     image: {
       class: "effect-parallax hero-img",
       src: "cloudinary/suspension-bridge",
@@ -23,12 +23,13 @@ block content
     })
       //- +head("About me.")
       +main
-        section.layout-padding-top.layout-padding-bottom-large.layout-clearfix
+        section.layout-padding-top.layout-padding-bottom-large.layout-clearfix.style-center
           //- span.layout-margin-horz-left.layout-inline-block= " "
           //- span.style-font-title.style-letter-head.layout-padding-right-nano.layout-inline-block.layout-left O
           //- +p("ne of my life goals is to leave everything I come in contact with better than I found it. This obviously can be difficult, but a couple of the ways I am trying to achieve this is to seize every opportunity and learn from previous mistakes... As a child I was curious, and my parents let my curiousity bloom. In high school I discovered a passion for engineering specifically the engineering of robots (which I later found out to be <strong>Mechatronics</strong>). <br> <br> I am Tenacious & Astute I aim to create only the best, I stop at nothing till the image I have in my mind has been captured in the project. I make sure that in all acts I commit too, I am ready to follow through even if the going gets difficult. I make sure to think things through thoroughly so as to avoid inefficienies. The definition of Astute by the Oxford dictionary is, ​very clever and quick at seeing what to do in a particular situation, especially how to get an advantage. I believe I enbody these traits when working on projects and I would love the oppertunity to show you. <br> <br> I created my portfolio site as a place to display some of the projects I have worked on, and as an easy source to access my resume. For more information")
-          h3.h5.style-font-30--device-phone.style-primary-dark.style-bold.layout-padding-vert-bottom Hi, I’m Joseph. Nice to meet you.
-          p(lorem="2" class="layout-margin-dull")
+          h3.h5.style-font-30--device-phone.style-primary-dark.style-bold Hi, I’m Joseph. Nice to meet you.
+          //- p(lorem="2" class="layout-margin-dull")
+          +p("For about a decade now, I have actively sought to leave the state of things better than I found it. I am a Mechatronics engineer at heart and on paper. I integrate hardware and software into harmonious matrimony to solve societal pain points. <br><br> I am always on my feet looking for the next opportunity. Through continuous improvement, confidence and determination, I seek to achieve my goals. Afterall, the game isn’t changed until the game is played.")
           //- +link({
           //-   href: "/about",
           //-   class: "layout-margin-vert-dull layout-margin-left-mini",
@@ -122,8 +123,10 @@ block content
           class: "layout-shorten-vert"
       })
         div.layout-padding-vert-bottom.layout-contain-small.layout-shorten-horz.layout-contain
-          h3.style-font-30.style-bold.layout-padding-vert-bottom Recent work.
-          p(lorem="2" class="layout-margin-horz-dull")
+          h3.style-font-30.style-bold Recent Work
+          //- p(lorem="2" class="layout-margin-horz-dull")
+          div.style-white
+            +p("Here are some of the proof of my work. These include some ongoing and finished research projects, personal projects, as well as some old school and work projects I think you should know about. ")
         //- div.layer-center-line
         //- 1st Row
         +row({
